# crawl

./: Cargo.toml  readme.md
data/items/: armor.json  potions.json  shields.json
data/localization/: en-pr.json  en-us.json
data/monsters/: generic.json  unique.json
items/: armor.json  collectibles.json  weapons.json
monsters/: generic.json
src/: game.rs  interface.rs  main.rs
src/entities/: item.rs  mod.rs  monster.rs  player.rs  world.rs
