[package]
name = "crawl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
console = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hottext = { git = "https://github.com/jakeledoux/hottext" }
colored = "2.0.0"
clap = "3.0.0-beta"
